# mfg-project-lifecycle

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOC_INDEX.md  GLOSSARY.md  MFG_LIFECYCLE.md  README.md  pyproject.toml
.github/workflows/: check-term-consistency.yml  generate-doc-index.yml  release.yml  validate-frontmatter.yml  validate-i18n.yml  validate-structure.yml
docs/: agentic-rag-inference.md
dvt-design-validation/: _manifest.yaml
dvt-design-validation/cp1-test-completeness/: _index.yaml  detailed-coverage-report-template.md  diagnostic-enhancement-plan-template.md  dvt-build-plan-template.md  test-gap-analysis-template.md  updated-trp-test-plan-template.md
dvt-design-validation/cp2-fixture-qualification/: _index.yaml  aoi-axi-qualification-report-template.md  equipment-calibration-plan-template.md  fixture-acceptance-report-template.md  fixture-qualification-plan-template.md  grr-report-template.md  halt-test-protocol-template.md  preventive-maintenance-plan-template.md
dvt-design-validation/cp3-sw-version-releasability/: _index.yaml  (+5 more)
evt-engineering-validation/: _manifest.yaml
i18n/: README.md  doc_titles.yaml  section_titles.yaml
mp-mass-production/: _manifest.yaml
p1-concept/: _manifest.yaml
pvt-production-validation/: _manifest.yaml
schemas/: checkpoint_index.schema.json  phase_manifest.schema.json  template_frontmatter.schema.json
scripts/: README.md  bootstrap_templates.py  bump_version.py  check_term_consistency.py  generate_doc_index.py  validate_frontmatter.py  validate_i18n.py  validate_structure.py
(+154 files in other folders)
